--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>My Extension</title>
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
     <h1>GPT Translator/Explanator</h1>
